import { fetch } from 'apollo-server-env';
import ApollosConfig from '@apollosproject/config';
import { createGlobalId } from '@apollosproject/server-core';
import { dataSource as Interactions } from '../index';

ApollosConfig.loadJs({
  ROCK: {
    API_URL: 'https://apollosrock.newspring.cc/api',
    API_TOKEN: 'some-rock-token',
    IMAGE_URL: 'https://apollosrock.newspring.cc/GetImage.ashx',
  },
  APP: {
    DEEP_LINK_HOST: 'apolloschurch',
  },
});

const buildGetMock = (response) => {
  const dataSource = new Interactions();
  const get = jest.fn();
  if (Array.isArray(response) && Array.isArray(response[0])) {
    response.forEach((responseVal) => {
      get.mockReturnValueOnce(
        new Promise((resolve) => resolve(dataSource.normalize(responseVal)))
      );
    });
  }
  get.mockReturnValue(
    new Promise((resolve) => resolve(dataSource.normalize(response)))
  );
  return get;
};

const context = {
  dataSources: {
    RockConstants: {
      modelType: buildGetMock({ Id: 123 }),
      contentItemInteractionComponent: buildGetMock({ Id: 789 }),
    },
    Auth: {
      getCurrentPerson: buildGetMock({ Id: 456 }),
    },
  },
};

describe('Interactions', () => {
  beforeEach(() => {
    fetch.resetMocks();
  });

  it('creates a new interaction', async () => {
    const dataSource = new Interactions();
    dataSource.initialize({ context });
    dataSource.get = buildGetMock({ Id: 1 });
    dataSource.post = buildGetMock('1');

    const result = await dataSource.createContentItemInteraction({
      nodeId: createGlobalId(1, 'UniversalContentItem'),
      operationName: 'Like',
      nodeTitle: 'Super Cool Content',
    });
    expect(result).toMatchSnapshot();
    expect(dataSource.get.mock.calls).toMatchSnapshot();
    expect(dataSource.post.mock.calls).toMatchSnapshot();
  });
});
